# ReSTIR_DR

./: .gitignore  .gitmodules  Dockerfile  README.md
.github/workflows/: wheels.yml
include/mitsuba/core/: reservoir.h
include/mitsuba/python/: docstr.h
include/mitsuba/render/: bsdf.h  emitter.h  film.h  texture.h
notebooks/: compute_signed_sample_reuse.py  convergence-assemble.py  derivatives.py  equal-error.py  inverse-rendering.py  positivization-assemble.py  positivization.py  results-assemble.py
scenes/ashtray/: license.txt  scene.xml
scenes/ashtray/meshes/: Ashtray_low.ply  Object_2.ply  Object_3.ply  Object_4.ply  Plane.ply  leg_1_low.ply  leg_2_low.ply  leg_3_low.ply
scenes/chalice/: license.txt  scene.xml
scenes/chalice/meshes/: Bistro_Research_Exterior_Paris_Building_01_Bistro_bottom_135.ply  Bistro_Research_Exterior_Paris_Building_01_Bistro_bottom_154.ply  Bistro_Research_Exterior_Paris_Building_01_Bistro_bottom_156.ply  Bistro_Research_Exterior_Paris_Building_01_paris_buildi_067e37b.ply  Bistro_Research_Exterior_Paris_Building_01_paris_buildi_068092b.ply  Bistro_Research_Exterior_Paris_Building_01_paris_buildi_0a4411d.ply  (+233 more)
scenes/christmas-tree/: scene.xml
scenes/tire/: license.txt  scene.xml
src/bsdfs/: diffuse.cpp  principled.cpp  twosided.cpp
src/core/: CMakeLists.txt
src/emitters/: envmap.cpp
src/films/: hdrfilm.cpp  specfilm.cpp
src/python/: main_v.cpp
src/spectra/: uniform.cpp
src/textures/: bitmap.cpp
tools/reservoir_sampling/: .gitignore  CMakeLists.txt  reservoir_sampling.cu  reservoir_sampling.ptx
(+111 files in other folders)
